XMLtoCSV/objects/unpackaged/objects/PCYC_KOL__c.object
<CustomObject>
    <fields>
        <fullName>PCYC_Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>KOLs</relationshipLabel>
        <relationshipName>KOLs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PCYC_Ad_Boards__c</fullName>
        <label>PCYC Ad Boards</label>
        <picklist>
            <picklistValues>
                <fullName>2015 Regional Advisory Board – DEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015 Regional Advisory Board – NYC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015 Commnity Advisory Board – BOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015 Community Advisory Board – SFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015 APAB – New OrLeans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015 APAB – Scottsdale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015 Global CLL Advisory Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015 ASH National Advisory Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015 Expert Forums</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015 Solide Tumer Investigator Forum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015 Heme EHA Investigator Forum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015 Heme ASH Investigator Forum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016 Community Advisory Board West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016 Community Advisory Board East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016 Regional Advisory Board West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016 Regional Advisory Board East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016 Advanced Practice Advisory Board East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016 Advanced Practice Advisory Board West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016 Global Advisory Board cGVHD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016 Cardiac Effects Roundtable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016 Commercial Advisory Board Community 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016 Commercial Advisory Board Community 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016 Commercial Advisory Board Community 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016 Commercial Advisory Board Community 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016 Commercial Advisory Board  Regional 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016 Commercial Advisory Board  Regional 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016 Commercial Advisory Board  Regional 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016 Commercial Advisory Board  Regional 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016 National Steering Committee 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016 National Steering Committee 2</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PCYC_CE_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CE Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>KOLs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PCYC_Clinical_Trial__c</fullName>
        <label>PCYC Clinical Trial</label>
        <picklist>
            <picklistValues>
                <fullName>04753</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1102</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1103</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1104</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1106</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1108</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1109</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1111</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1112</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1115</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1116</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1117</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1118</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1119</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1120</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1121</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1122E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1123</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1124</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1125</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1126E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1127</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1128</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1129</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1130</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1131</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1132</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1133</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1134</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1135</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PCYC_Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_EVENTS__c</fullName>
        <label>Events</label>
        <picklist>
            <picklistValues>
                <fullName>2015 Dec 3–ASH-PCYC Steering Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015 Dec 4–ASH-PCYC Investigator Forum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015 –ASH-PCYC MA Field Team Engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015 –ASH-PCYC Executive Engagement</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PCYC_IST__c</fullName>
        <label>IST</label>
        <picklist>
            <picklistValues>
                <fullName>10045</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10047</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10048</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10049</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10051</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10052</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10053</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10054</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10055</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10056</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10058</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10059</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10062</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10063</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10064</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10065</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10066</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10070</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10071</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10072</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10073</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10074</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10079</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10091</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10092</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10093</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10094</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10095</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10096</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PCYC_Indication__c</fullName>
        <label>Indication</label>
        <picklist>
            <picklistValues>
                <fullName>CLL</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>WM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GVHD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MZL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DLBCL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_JnJ_Advisory_Boards__c</fullName>
        <label>JnJ Advisory Boards</label>
        <picklist>
            <picklistValues>
                <fullName>2015 Dec 4–ASH–Janssen MA Advisory Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015 - JBI US Ad Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015 - Janssen Global BTK Res.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015 - Dava Global Forum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016 Whistler Advisory Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016 Field Advisory Board 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016 Field Advisory Board 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016 Field Advisory Board 3</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PCYC_JnJ_Clinical_Trail__c</fullName>
        <label>JnJ Clinical Trail</label>
        <picklist>
            <picklistValues>
                <fullName>CLL 3001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DBL 3001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLR 2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCL2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCL3002</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PCYC_MSL_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MSL Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>KOLs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PCYC_MTA__c</fullName>
        <label>MTA</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_OL_Type__c</fullName>
        <description>This field is utilized to identify Opinion Leaders on KOL</description>
        <label>OL Type</label>
        <picklist>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_Other_Projects__c</fullName>
        <label>Other Projects</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_SC_Member__c</fullName>
        <description>SC Member</description>
        <label>SC Member</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_Speaker__c</fullName>
        <label>Speaker</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>KOL</label>
    <nameField>
        <displayFormat>KOL-{00000}</displayFormat>
        <label>KOL_Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KOLs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>